--- a/index.html
+++ b/index.html
@@ -978,6 +978,8 @@
     <script src="JavaScript/modalCadastrarProduto.js"></script>
 
     <script src="JavaScript/modal-confirmacoes.js"></script>
+
+    <script src="node_modules/simple-mask-money/lib/simple-mask-money.js"></script>
     <script src="JavaScript/mascaraDeDinheiro.js"></script>
 </body>
 
