Tirando "opcional" do modal de identificar cliente
Signed-off-by: Tiago zay <tiagozay@gmail.com>

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
          <!-- ===MODAL IDENTIFICAR CLIENTE===MODAL IDENTIFICAR CLIENTE===MODAL IDENTIFICAR CLIENTE=== -->
          <dialog id="dialog-modal-identificar-cliente">
             <div id="dialog-modal-identificar-cliente__divBtnFechar">
-                <h2>Indentificar cliente (opcional)</h2>
+                <h2>Indentificar cliente</h2>
                 <button class="btn-fechar-modal material-icons" id="dialog-modal-identificar-cliente__btnFechar">close</button>
             </div>
 
