Implementando Orm e fetch na exibição das fichas
Signed-off-by: Tiago zay <tiagozay@gmail.com>

--- a/index.html
+++ b/index.html
@@ -921,6 +921,7 @@
     <script src="JavaScript/Services/CadastrarClienteService.js"></script>
     <script src="JavaScript/Services/EditarClienteService.js"></script>
     <script src="JavaScript/Services/IdentificarClienteService.js"></script>
+    <script src="JavaScript/Helpers/DateHelper.js"></script>
 
     <script src="JavaScript/venda/identificarCliente.js"></script>
     <script src="JavaScript/venda/identificarFicha.js"></script>
